codegen/tests/ui/main/missing-attribute.stderr
error: resource needs an attribute configuration

         = help: Try adding a config like `#[shuttle_shared_db::Postgres]`

 --> tests/ui/main/missing-attribute.rs:2:27
  |
2 | async fn missing_attriute(pool: PgPool, cache: Redis) -> ShuttleRocket {}
  |                           ^^^^

error: resource needs an attribute configuration

         = help: Try adding a config like `#[shuttle_shared_db::Postgres]`

 --> tests/ui/main/missing-attribute.rs:2:41
  |
2 | async fn missing_attriute(pool: PgPool, cache: Redis) -> ShuttleRocket {}
  |                                         ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/main/missing-attribute.rs:2:74
  |
2 | async fn missing_attriute(pool: PgPool, cache: Redis) -> ShuttleRocket {}
  |                                                                          ^ consider adding a `main` function to `$DIR/tests/ui/main/missing-attribute.rs`
